2016-05-11  Carl Hetherington  <cth@carlh.net>

	* Hopefully improve strange colour fringing on
	subtitles burnt into existing DCP sources (#752).

2016-04-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.1 released.

2016-04-29  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect date when using "copy as name" (#869).

2016-04-27  Carl Hetherington  <cth@carlh.net>

	* Add free-text notes field to cinemas and screens.

	* Request confirmation before resetting preferences (#867).

2016-04-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.0 released.

2016-04-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.20 released.

2016-04-28  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-04-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.19 released.

2016-04-27  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.18 released.

2016-04-26  Carl Hetherington  <cth@carlh.net>

	* Fix non-working delete key.

	* Updated ru_RU and uk_UA translations from Igor Voytovich.

	* Updated sv_SE translation from Adam Klotblixt.

	* Updated de_DE translation from Carsten Kurz.

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated es_ES translation from Manuel AC.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.17 released.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.7.16 released.

2016-04-25  c.hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* When making up the ISDCF name assume subtitles are burnt in unless
	we know otherwise.

	* Fix saving of modified video frame rates for subtitle content.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.15 released.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Add cancel option to confirmation dialogue when closing