@@ -318,7 +318,8 @@ Player::transform_image_subtitles (list<ImageSubtitle> subs) const
 					scaled_size,
 					dcp::YUV_TO_RGB_REC601,
 					i->image->pixel_format (),
-					true
+					true,
+					_fast
 					),
 				Position<int> (
 					lrint (_video_container_size.width * i->rectangle.x),
